WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163573
REGRESSION (
r169805
): WKWebView canGoBack returning YES when nothing is in the back-forward list after restoring session state
https://bugs.webkit.org/show_bug.cgi?id=163573
Summary
REGRESSION (r169805): WKWebView canGoBack returning YES when nothing is in th...
Tim Horton
Reported
2016-10-17 16:59:56 PDT
REGRESSION (
r169805
): WKWebView canGoBack returning YES when nothing is in the back-forward list after restoring session state
Attachments
Patch
(4.55 KB, patch)
2016-10-17 17:02 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-10-17 17:02:33 PDT
Created
attachment 291899
[details]
Patch
Tim Horton
Comment 2
2016-10-17 17:03:01 PDT
Steps To Reproduce: 1. Create a WKWebView and navigate to a page. 2. Use -[WKWebView _sessionStateWithFilter:] to remove the one item in the WKWebView’s back forward list, and use -[WKWebView _restoreSessionState:andNavigate:] (navigate = NO) to restore the empty back forward list. 3. Observe the value of -[WKWebView canGoBack]. Results: -[WKWebView canGoBack] returns YES even though there are no items in the back list. Regression: This bug was introduced by:
https://trac.webkit.org/changeset/169805
WebKit Commit Bot
Comment 3
2016-10-17 17:47:47 PDT
Comment on
attachment 291899
[details]
Patch Clearing flags on attachment: 291899 Committed
r207445
: <
http://trac.webkit.org/changeset/207445
>
WebKit Commit Bot
Comment 4
2016-10-17 17:47:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug