REGRESSION (r169805): WKWebView canGoBack returning YES when nothing is in the back-forward list after restoring session state https://bugs.webkit.org/show_bug.cgi?id=163573 <rdar://problem/28744549>

Reviewed by Dan Bernstein.

Source/WebKit2:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::restoreFromSessionState):
Update PageLoadState's canGoBack/canGoForward bits when restoring from
session state, because in the don't-navigate case, nothing else will make this happen,
and it will remain stale.

Tools:

* TestWebKitAPI/Tests/WebKit2/WKBackForwardList.mm:
(TEST):
Add a test ensuring that canGoBack returns NO after restoring session state without navigating.


Canonical link: https://commits.webkit.org/181363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207445 268f45cc-cd09-0410-ab3c-d52691b4dbfc